change le non de l'excice 2

--- a/Exercice3/index.html
+++ b/Exercice3/index.html
@@ -6,7 +6,7 @@
     <title>Types de Variables en JavaScript</title>
 </head>
 <body>
-    <h1>Types de Variables en JavaScript</h1>
+    <h1>Declaration Types de Variables en JavaScript</h1>
     <div id="variables"></div>
 
     <script src="scripe.js"></script>
